--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@babel/runtime": "^7.19.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fontsource/inter": "^4.5.14",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/joy": "^5.0.0-alpha.51",
     "@mui/material": "^5.10.9",
     "@svgr/webpack": "^6.5.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,14 +19,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/react-redux": "^7.1.24",
     "buffer": "^6.0.3",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
